--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,8 +7,13 @@
             <h1><a href="/">Django Girls Blog</a></h1>
         </div>
 
-        <div>
-            <p>published: 14.06.2014 , 12:14</p>
-        </div>
+        {% for post in posts %}
+            <div>
+                <p>published: {{ posts.published_date }}</p>
+                <h2><a href="">{{ posts.title }}</a></h2>
+                <p>{{ post.text|linebreaksbr }}</p>
+            </div>
+        {% end for %}
+
     </body>
 </html>
