--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -16,7 +16,7 @@
 
         <div class ="content container">
             <div class ="row">
-                <div class "col-md-8">
+                <div class="col-md-8">
                     {% for post in posts %}
                         <div class="post">
                             <div class ="date">
