--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -4,6 +4,12 @@ h1 a, h2 a {
     padding: 20px 20px 20px 40px;
 }
 
+.page-header{
+    background-color: #00FF00;
+    margin-top: 0;
+    padding: 20px 20px 20px 40px
+}
+
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active{
     color: #ffffff;
     font-size: 36pt;
