--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -17,7 +17,7 @@
             <div class ="row">
                 <div class="col-md-8">
                     {% block content %}
-                    {% endcontent %}
+                    {% endblock %}
                 </div>
             </div>
         </div>
