--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,9 +1,3 @@
-h1 a, h2 a {
-    color: #FF0000;
-    font-family: 'Lobster';
-    padding: 20px 20px 20px 40px;
-}
-
 .page-header{
     background-color: #00FF00;
     margin-top: 0;
@@ -11,8 +5,9 @@ h1 a, h2 a {
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active{
-    color: #ffffff;
+    color: #ff0000;
     font-size: 36pt;
+    font-family: 'Lobster';
     text-decoration: none;
 }
 
