--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,10 +3,10 @@
 {% block content %}
     {% for post in posts %}
         <div class="post">
-            <div class ="date">
-                <p>published: {{ posts.publish_date }}</p>
-            </div>
             <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+            <div class ="date">
+                <p>published: {{ post.published_date }}</p>
+            </div>
             <p>{{ post.text|linebreaksbr }}</p>
         </div>
     {% endfor %}
